# harness_to_mcp

./: .gitignore  README.md  README_cn.md  pyproject.toml
doc/: dev.md
examples/: list_tools.py
harness_to_mcp/: __info__.py  __init__.py  adapters.py  bridge.py  launchers.py  openai_chat.py  opencode.py  server.py
tests/: test_adapters.py  test_bridge.py  test_cli.py  test_launchers.py  test_metadata.py  test_openai_chat.py  test_runtime.py  test_server_middleware.py
